<resources>
    <string name="app_name">Lendbak</string>
    <!--    General strings-->
    <string name="dummyHomeText">Welcome to the homepage</string>
    <string name="continueBtn">Continue</string>
    <string name="getStartedBtn">Get Started</string>
    <string name="verifyBtn">Verify</string>

    <!--    Main Activity-->
    <string name="logoText">why buy when you can lend…</string>
    <string name="logoCD">app logo image</string>
    <string name="introText">Do you have things other people need? Great! Start making some cool cash by lending to other people.</string>
    <string name="firstIntroHeading">Make extra cash from your stuff</string>
    <string name="secondIntroHeading">Build your dream now, no obstacles!</string>
    <string name="thirdIntroHeading">Help the community get better</string>
    <string name="introCD">intro images</string>

    <!--    Login Activity-->
    <string name="login">Login</string>
    <string name="loginBtn">Log in</string>
    <string name="loginSub">Enter your email and password</string>
    <string name="remember">Remember me</string>
    <string name="forgot">Forgot password?</string>
    <string name="noAccount">Don’t have an account?</string>

    <!--    Sign up Activity-->
    <string name="signup">Sign up</string>
    <string name="signupSub">Enter your credentials to continue</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="signupOptions">Or sign up with</string>
    <string name="hasAccount">Already have an account?</string>
    <string name="googleCD">Google icon</string>
    <string name="appleCD">Apple icon</string>
    <string name="facebookCD">Facebook icon</string>

    <!--    Verify Activity-->
    <string name="verifyEmailTitle">Verify your email address</string>
    <string name="verifyEmailText">We have sent you an email with a link to verify your email address.</string>
    <string name="verifyPhoneTitle">Verify your phone number</string>
    <string name="verifyPhoneText">We have sent an OTP PIN via SMS to the number you entered.</string>
    <string name="verifyOtp">PIN</string>
    <string name="verifyCD">verify icon</string>
</resources>